Change threadId to getId for Java 11